[package]
name = "blek"
description = "Blek le Rat is a fast, simple template tool for the commandline"
readme = "README.md"
version = "0.1.0"
authors = ["Bèr Kessels <ber@berk.es>"]
edition = "2018"
repository = "https://git.webschuur.com/berkes/blek"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
getopts = "0.2"
tera = "1.5.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
tempfile = "3"
